v1.1.0/modules/schema/pages/class/TemperaturePolynomialLimit.adoc
= `TemperaturePolynomialLimit`
:toclevels: 4


+++This describes the coefficients of a polynomial function that has temperature as input and calculates limit values as output.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:TemperaturePolynomialLimit`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/LimitDependency.adoc[`LimitDependency`]
*** xref::class/EnvironmentalDependentLimit.adoc[`EnvironmentalDependentLimit`]
**** *`TemperaturePolynomialLimit`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<coefficient0,`coefficient0`>>
//| [[slots_table.coefficient0]]<<coefficient0,`coefficient0`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++The polinomial coefficent of power 0.+++
| _n/a_

| <<coefficient1,`coefficient1`>>
//| [[slots_table.coefficient1]]<<coefficient1,`coefficient1`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++The polinomial coefficent of power 1.+++
| _n/a_

| <<coefficient2,`coefficient2`>>
//| [[slots_table.coefficient2]]<<coefficient2,`coefficient2`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++The polinomial coefficent of power 2.+++
| _n/a_

| <<coefficient3,`coefficient3`>>
//| [[slots_table.coefficient3]]<<coefficient3,`coefficient3`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++The polinomial coefficent of power 3.+++
| _n/a_

| <<coefficient4,`coefficient4`>>
//| [[slots_table.coefficient4]]<<coefficient4,`coefficient4`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++The polinomial coefficent of power 4.+++
| _n/a_

| <<Equipment,`Equipment`>>
//| [[slots_table.Equipment]]<<Equipment,`Equipment`>>
| 0..1 +
xref::class/Equipment.adoc[`Equipment`]
| +++The equipment for which this limit dependency model is organized under.+++
| xref::class/LimitDependency.adoc[`LimitDependency`]

| <<OperationalLimit,`OperationalLimit`>>
//| [[slots_table.OperationalLimit]]<<OperationalLimit,`OperationalLimit`>>
| 0..* +
xref::class/OperationalLimit.adoc[`OperationalLimit`]
| +++The operational limits to which this limit dependency model applies.+++
| xref::class/LimitDependency.adoc[`LimitDependency`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#coefficient0]
=== `coefficient0`
+++The polinomial coefficent of power 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TemperaturePolynomialLimit.coefficient0`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.coefficient0,&#10548;>>
--
////


//[discrete]
[#coefficient1]
=== `coefficient1`
+++The polinomial coefficent of power 1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TemperaturePolynomialLimit.coefficient1`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.coefficient1,&#10548;>>
--
////


//[discrete]
[#coefficient2]
=== `coefficient2`
+++The polinomial coefficent of power 2.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TemperaturePolynomialLimit.coefficient2`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.coefficient2,&#10548;>>
--
////


//[discrete]
[#coefficient3]
=== `coefficient3`
+++The polinomial coefficent of power 3.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TemperaturePolynomialLimit.coefficient3`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.coefficient3,&#10548;>>
--
////


//[discrete]
[#coefficient4]
=== `coefficient4`
+++The polinomial coefficent of power 4.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TemperaturePolynomialLimit.coefficient4`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.coefficient4,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#Equipment]
=== `Equipment`
+++The equipment for which this limit dependency model is organized under.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:LimitDependency.Equipment`
| Cardinality
| 0..1
| Type
| xref::class/Equipment.adoc[`Equipment`]

| Inherited from
| xref::class/LimitDependency.adoc[`LimitDependency`]


|===

////
[.text-left]
--
<<slots_table.Equipment,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#OperationalLimit]
=== `OperationalLimit`
+++The operational limits to which this limit dependency model applies.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:LimitDependency.OperationalLimit`
| Cardinality
| 0..*
| Type
| xref::class/OperationalLimit.adoc[`OperationalLimit`]

| Inherited from
| xref::class/LimitDependency.adoc[`LimitDependency`]


|===

////
[.text-left]
--
<<slots_table.OperationalLimit,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////





== Used by


This class is not used by any other classes as the range of a slot.
